Fix word wrapping and groundwork for loading previous messages

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,6 +8,14 @@ html, body {
 
 /*Chat*/
 
+.wordwrap { 
+	white-space: pre-wrap;      /* CSS3 */   
+	white-space: -moz-pre-wrap; /* Firefox */    
+	white-space: -pre-wrap;     /* Opera <7 */   
+	white-space: -o-pre-wrap;   /* Opera 7 */    
+	word-wrap: break-word;      /* IE */
+}
+
 #chatroom {
 	margin-top: 1em;
 }
